Fix autocomplete getting cut off by Output pane

--- a/src/Apps/NetPad.Apps.App/App/src/windows/main/work-area/work-area.scss
+++ b/src/Apps/NetPad.Apps.App/App/src/windows/main/work-area/work-area.scss
@@ -2,7 +2,6 @@ work-area {
     display: flex;
     flex-direction: row;
     min-width: 0;
-    overflow: hidden;
 
     .viewer-host {
         display: flex;
